WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13872
REGRESSION: An empty search field can have a cancel button
https://bugs.webkit.org/show_bug.cgi?id=13872
Summary
REGRESSION: An empty search field can have a cancel button
mitz
Reported
2007-05-25 04:48:44 PDT
Essentially the same problem as
bug 13800
: search fields may share the cancel button style, but they should not, because they mutate it independently of each other. I have a patch that includes a test case.
Attachments
Avoid sharing the cancel button style
(18.78 KB, patch)
2007-05-25 04:51 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-05-25 04:51:10 PDT
Created
attachment 14718
[details]
Avoid sharing the cancel button style Search fields use a few other pseudo element styles (for the results widget), but since they don't mutate them after creation, I don't see any risk in that.
Darin Adler
Comment 2
2007-05-25 08:06:28 PDT
Comment on
attachment 14718
[details]
Avoid sharing the cancel button style r=me
Sam Weinig
Comment 3
2007-05-25 12:15:59 PDT
Landed in
r21767
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug