LayoutTests:

Reviewed by Darin.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=13872
          REGRESSION: An empty search field can have a cancel button

        * fast/forms/search-cancel-button-style-sharing-expected.checksum: Added.
        * fast/forms/search-cancel-button-style-sharing-expected.png: Added.
        * fast/forms/search-cancel-button-style-sharing-expected.txt: Added.
        * fast/forms/search-cancel-button-style-sharing.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13872
          REGRESSION: An empty search field can have a cancel button

        Test: fast/forms/search-cancel-button-style-sharing.html

        * rendering/RenderTextControl.cpp:
        (WebCore::RenderTextControl::createCancelButtonStyle): Prevented sharing of
        the cancel button style between search fields that share style, because
        each search field mutates the style to show and hide the cancel button.



Canonical link: https://commits.webkit.org/18171@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21767 268f45cc-cd09-0410-ab3c-d52691b4dbfc